--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html>
   <head>
     <title>suraj kushwaha first website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <img src="https://media.wired.com/photos/5c5b3e5c8918aa2ca29e9178/master/w_1600,c_limit/02_GOT-Culture.jpg" width="300" height="270">
